fixed alignment issues between description and list

--- a/css/style.css
+++ b/css/style.css
@@ -1,18 +1,29 @@
 /* Global */
+ul {
+    width: 100%;
+    margin: 0 -10%;
+    text-align: center;
+}
+
+li{
+  margin: 1.3em;
+  display: inline-block;
+  float: left;
+}
 
 #main {
   /* position: relative; */
   padding: 30px;
-  margin: auto;
-  outline: 40px
-  width: 768px;
+  margin: 30px auto;
+
+  background: #DCDCDC;
+  text-align: center;
 }
 
 /* Title */
 #title, #subtitle{
   text-align: center;
 }
-
 
 /* image and caption */
 #img-div{
@@ -30,20 +41,22 @@
 /* tribute info */
 #tribute-info{
   margin: 0 35%;
-}
-
-#tribute-info h3, #tribute-info h6{
   text-align: center;
 }
+
+
+
+/* #tribute-info h3, #tribute-info h6{
+  text-align: center;
+} */
 
 #tribute-info h6{
   margin-top: -10px;
 }
 
-#tribute-info ul{
-  line-height: 1.5;
-}
-
+/* #tribute-info li{
+  list-style-position: outside;
+} */
 
 /* quote */
 #quote{
